--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/usermanager?characterEncoding=utf8&useSSL=true
+jdbc.url=jdbc:mysql://localhost:3306/test
 jdbc.username=root
-jdbc.password=b123
+jdbc.password=a123
